make sure nonblog site is not too wide

--- a/css/main.css
+++ b/css/main.css
@@ -56,11 +56,13 @@ div#all_but_header {
     min-height:75%;
 }
 div#prose_block_nonblog {
+    max-width: 1100px;
+    margin: auto;
     text-align:right;
     color: white;
     padding-top:4%;
     padding-bottom: 70px;
-    padding-left: 10%;
+    padding-left: 8%;
     padding-right: 8%;
     font-family: Purisa, Arial, Helvetica, sans-serif;
 }
